<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022. CMPUT301W22T29
  ~ Subject to MIT License
  ~ See full terms at https://github.com/CMPUT301W22T29/QuiRky/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewQRFragment">

    <Button
        android:id="@+id/commentsButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_comment"
        app:layout_constraintBottom_toTopOf="@+id/elseButtonView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/elseButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_who_else_has_this_code"
        app:layout_constraintBottom_toTopOf="@+id/privateButtonView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/privateButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/button_set_private"
        app:layout_constraintEnd_toStartOf="@+id/deleteButtonView"
        app:layout_constraintTop_toTopOf="@+id/deleteButtonView" />

    <Button
        android:id="@+id/deleteButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="84dp"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/locationButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:background="@color/teal_700"
        android:text="@string/location"
        app:layout_constraintBottom_toTopOf="@+id/commentsButtonView"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>