<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyStatsActivity">

    <TextView
        android:id="@+id/totScanned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="264dp"
        android:text="@string/total_scanned"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsTextView" />

    <TextView
        android:id="@+id/scannedRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="264dp"
        android:text="@string/ranking"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totScore" />

    <TextView
        android:id="@+id/scoreRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/ranking"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totScore" />

    <TextView
        android:id="@+id/statsTextView"
        android:layout_width="196dp"
        android:layout_height="75dp"
        android:layout_marginTop="64dp"
        android:text="@string/my_stats"
        android:textColor="#0E2EDD"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/total_score"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsTextView" />

    <Button
        android:id="@+id/mystatsBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totScore2"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:hint="No Score"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/totScore"
        app:layout_constraintTop_toTopOf="@+id/totScore"
       />

    <TextView
        android:id="@+id/scoreRanking2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="No Ranking"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/scoreRanking"
        app:layout_constraintTop_toTopOf="@+id/scoreRanking" />

    <TextView
        android:id="@+id/scannedRanking2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="None"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/scannedRanking"
        app:layout_constraintTop_toTopOf="@+id/scannedRanking" />

    <TextView
        android:id="@+id/totScanned2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="No Ranking"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/totScanned"
        app:layout_constraintTop_toTopOf="@+id/totScanned" />


</androidx.constraintlayout.widget.ConstraintLayout>